# mobile-sdd-factory

./: .gitignore  .mcp.json  AGENTS.md  BEST_PRACTICES_CHECKLIST.md  CLAUDE.md  DEVELOPERS_GUIDE.md  README.md  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
backend/: __init__.py  config.py  dependencies.py  logging.py  main.py  role_baselines.py  role_runtime_config.py  runtime_defaults.py  session_policy.py
config/: ios-verification-map.json
distributions/: skill-builder.skill
docs/: acli.md  coordinator-owned-result-ingress-plan.md  deprecated-surface.md  dual-review-lanes-migration-plan.md  glab.md  internal-review-lanes-improvement-plan.md  ios-verification-target-mapping.md  operator-guide.md  rag.md  runtime-model.md  setup.md  smart-verification-agent-backlog.md  smart-verification-agent.md  terminal-result-contract.md  work-item-result-submit-plan.md
factory/: __init__.py  open-local-ui.sh  run-local-stack.sh
knowledge/: README.md
memory/: MEMORY.md  android-patterns.md  feedback-ios-android-verify.md  feedback-no-credential-workarounds.md  feedback-notion.md  feedback_jira_subtask_assignee.md
scripts/: README.md  acli-dump-issue.sh  adf-to-md.sh  adf_to_md.sh  android-build.sh  android-lint.sh  android-prepare.sh  android-test.sh  android-verify.sh  backend.sh  check-updates.sh  cleanup.sh  commit-and-resolve.sh  commit-task-state.sh  complete-subtask.sh  create-issue.sh  create-mr.sh  create-subtask.sh  create-subtasks-batch.sh  dev.sh  fetch-mr-comments.sh  generate-diff.sh  get-issue-parent.sh  get-issue-type.sh  gitlab.sh  (+30 more)
(+308 files in other folders)
